--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 AUTHORS
 
-... (list here, one each line, name and email)
-...
-
-Athors shall aknowledge the following people for they valuable contributions.
+Marcos Gabriel Rodrigues Maki
+número USP: 11802457
+email USP: marcos.maki@gmail.com
+email no GIT e no Classroom: marcos.ss.grm13@gmail.com 
