--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@ AUTHORS
 
 Marcos Gabriel Rodrigues Maki
 número USP: 11802457
-email USP: marcos.maki@gmail.com
+email USP: marcos.maki@usp.br
 email no GIT e no Classroom: marcos.ss.grm13@gmail.com 
